assets/css/style.css
/* ... */
.main-header .nav-button.hovered span:nth-child(1) {
  -webkit-transform: translateY(-7px);
          transform: translateY(-7px);
}
.main-header .nav-button.hovered span:nth-child(2) {
  -webkit-transform: translateY(7px);
          transform: translateY(7px);
}
.main-header .nav-button span {
  display: block;
  height: 2px;
  width: 26px;
  width: 0;
  background: #fff;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -1px 0 0 -13px;
  margin-left: 0;
  transition: all 0.5s !important;
  border-radius: 50%;
  animation: shadow-pulse 1s infinite;
}
.main-header .nav-button span:nth-child(1) {
  -webkit-transform: translateY(-5px);
          transform: translateY(-5px);
}
.main-header .nav-button span:nth-child(2) {
  -webkit-transform: translateY(5px);
          transform: translateY(5px);
}
.main-header .main-nav {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  border-right: 1px solid #efefef;
}
.main-header .main-nav .mask {
  position: relative;
  height: 100%;
  width: 100%;
  overflow: hidden;
  background: #000;
  z-index: 1;
}
.main-header .main-nav .pictures {
  position: absolute;
  top: 80px;
  right: 80px;
  width: calc(100% - 500px);
  height: calc(100% - 160px);
  z-index: 2;
}
.main-header .main-nav .pictures img {
  display: block;
  max-height: 100%;
  max-width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
          transform: translateX(-50%) translateY(-50%);
}
.main-header .main-nav .list {
  font: 300 35px/60px 'Work Sans', 'Helvetica', sans-serif
  position: absolute;
  left: 100px;
  top: 100px;
  z-index: 3;
}
.main-header .main-nav .list a {
  display: block;
  height: 100%;
}
.main-header .main-nav .list li {
  position: relative;
  color: #f4f4ff;
}
.main-header .main-nav .list li:before {
  display: block;
  content: '';
  width: 14px;
  height: 14px;
  border-radius: 100%;
  background: #327af0;
  position: absolute;
  top: 50%;
  margin-top: -7px;
  left: -35px;
  opacity: 0;
}
.main-header .main-nav .list li:nth-child(1) {
  margin-bottom: 100px;
}
.main-header .main-nav .list li:hover,
.main-header .main-nav .list li.current,
.main-header .main-nav .list li.active {
  color: #327af0;
}
.main-header .main-nav .list li:hover:before,
.main-header .main-nav .list li.current:before,
.main-header .main-nav .list li.active:before {
  opacity: 1;
}
.main-header .social-links {
  position: absolute;
  bottom: 30px;
  left: 100px;
  z-index: 3;
  font: 400 18px/30px 'Work Sans', 'Helvetica', sans-serif;
  color: #9b9ba4;
}
.main-header .social-links > a {
  color: #75757d;
}
.main-header .social-links a {
  transition: color 700ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
}
.main-header .social-links a:hover {
  color: #2a2a2c;
}
.main-header.animation-start {
  transition: -webkit-transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
  transition: transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
}
.main-header.animation-start-timeout .main-nav .mask {
  transition: -webkit-transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
  transition: transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
}
.main-header.animation-start-timeout .nav-button span {
  width: 26px;
  margin-left: -13px;
}
.main-header .nav-button span {
  transition: -webkit-transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
  transition: transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
}
.main-header .main-nav .mask-outer {
  -webkit-transform: translateX(0%);
          transform: translateX(0%);
}
.main-header .main-nav .mask-inner {
  -webkit-transform: translateX(100%);
          transform: translateX(100%);
}
.main-header .main-nav .list li {
  -webkit-transform: translateX(100px);
          transform: translateX(100px);
  opacity: 0;
  transition: -webkit-transform 0ms cubic-bezier(0.19, 1, 0.22, 1) 1000ms, opacity 0ms cubic-bezier(0.19, 1, 0.22, 1) 1000ms;
  transition: transform 0ms cubic-bezier(0.19, 1, 0.22, 1) 1000ms, opacity 0ms cubic-bezier(0.19, 1, 0.22, 1) 1000ms;
}
.main-header .pictures li img {
  opacity: 0;
  transition: opacity 500ms cubic-bezier(0.19, 1, 0.22, 1) 0ms, z-index 0ms cubic-bezier(0.19, 1, 0.22, 1) 500ms;
}
.main-header .pictures li.active img,
.main-header .pictures li.current img {
  opacity: 1;
}
.main-header .pictures li.active img {
  transition: opacity 500ms cubic-bezier(0.19, 1, 0.22, 1) 0ms, z-index 0ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
  z-index: 3;
}
.main-header.displayed {
  -webkit-transform: translateX(0);
          transform: translateX(0);
}
.main-header.displayed .nav-button span:nth-child(1) {
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}
.main-header.displayed .nav-button span:nth-child(2) {
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}
.main-header.displayed .main-nav .mask {
  -webkit-transform: translateX(0);
          transform: translateX(0);
}
.main-header.displayed .list li {
  -webkit-transform: translateX(0);
          transform: translateX(0);
  opacity: 1;
  transition: -webkit-transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms, opacity 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
  transition: transform 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms, opacity 1000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
}
.main-header.displayed .list li:nth-child(1) {
  transition-delay: 0ms;
}
.main-header.displayed .list li:nth-child(2) {
  transition-delay: 50ms;
}
.main-header.displayed .list li:nth-child(3) {
  transition-delay: 100ms;
}
.main-header.displayed .list li:nth-child(4) {
  transition-delay: 150ms;
}
.main-header.displayed .list li:nth-child(5) {
  transition-delay: 200ms;
}
.main-header.displayed .list li:nth-child(6) {
  transition-delay: 250ms;
}
.main-header.displayed .list li:nth-child(7) {
  transition-delay: 250ms;
}
.main-header.displayed .list li:nth-child(8) {
  transition-delay: 250ms;
}
/* ... */

